2013-10-18  James Gallagher <jgallagher@opendap.org>

	svn:ignore

2013-10-17  James Gallagher <jgallagher@opendap.org>

	Manually patched changes to Sequence::read_row and
	TestSequence::read() from the DAP4 development branch so they work
	with the newly modified handlers (the DAP4 branch uses _trunk_ copies
	of the handlers). We will have to document this change before
	releasing the code!

	M    tests/TestSequence.cc
	M    Sequence.cc

2013-10-17  James Gallagher <jgallagher@opendap.org>

	Added to svn:ignore

2013-10-15  James Gallagher <jgallagher@opendap.org>

	Added

	A    gl/glthread
	A    gl/glthread/threadlib.c
	A    gl/glthread/lock.c
	A    gl/glthread/lock.h

2013-10-15  James Gallagher <jgallagher@opendap.org>

	Added

	AM   config.rpath

2013-10-15  James Gallagher <jgallagher@opendap.org>

	Added to gl

	A    gl/m4/lib-link.m4
	A    gl/m4/lock.m4
	A    gl/m4/lib-prefix.m4
	A    gl/m4/lib-ld.m4
	A    gl/m4/eealloc.m4
	A    gl/m4/extern-inline.m4
	A    gl/m4/threadlib.m4
	A    gl/wctype-h.c
	A    gl/unistd.c

2013-10-15  James Gallagher <jgallagher@opendap.org>

	Updated gnulib.

	M    XMLWriter.cc
	M    conf/snippet/c++defs.h
	M    conf/snippet/warn-on-use.h
	M    conf/snippet/arg-nonnull.h
	M    Byte.h
	M    XDRUtils.cc
	M    ServerFunction.cc
	M    Url.cc
	M    XDRFileUnMarshaller.cc
	M    gl/m4/fcntl-o.m4
	M    gl/m4/configmake.m4
	M    gl/m4/localcharset.m4
	M    gl/m4/locale_h.m4
	M    gl/m4/sys_types_h.m4
	M    gl/m4/mbrtowc.m4
	M    gl/m4/btowc.m4
	M    gl/m4/longlong.m4
	M    gl/m4/00gnulib.m4
	M    gl/m4/ssize_t.m4
	M    gl/m4/glibc21.m4
	M    gl/m4/localeconv.m4
	M    gl/m4/codeset.m4
	M    gl/m4/alloca.m4
	M    gl/m4/off_t.m4
	M    gl/m4/locale-fr.m4
	M    gl/m4/langinfo_h.m4
	M    gl/m4/wint_t.m4
	M    gl/m4/mbsinit.m4
	M    gl/m4/stdint.m4
	M    gl/m4/gnulib-common.m4
	M    gl/m4/stdbool.m4
	M    gl/m4/malloc.m4
	M    gl/m4/regex.m4
	M    gl/m4/warn-on-use.m4
	M    gl/m4/wchar_h.m4
	M    gl/m4/gnulib-comp.m4
	M    gl/m4/unistd_h.m4